# model-serving

./: .gitignore  .gitmodules  Makefile  README.md  copy_back.py  pyproject.toml  test_local.py
Punica-LM/: punica_lm.py  test_local.py
Punica-LM_new/: Readme.md  punica_lm.py  test_local.py
examples/: textgen-api-demo.py
proto/: generate.proto
server/: pyproject.toml  setup.py  test_cases.py  test_local.py  test_local_api.py  test_local_grpc.py  test_ui.py
server/examples/: test_cases.py  test_llava.py  test_local_api.py  test_local_grpc.py  test_ui.py
server/punica_kernels/: __init__.py  setup.py
server/text_generation_server/: cli.py  server.py
server/text_generation_server/models/: __init__.py  llava.py  llava_causal_lm.py  punica_causal_lm.py
server/text_generation_server/models/custom_modeling/: embedding_llama.py  punica_llama.py  punica_llama_lora.py
server/text_generation_server/models/llava_models/encoder/: encoder.py
server/text_generation_server/models/llava_models/projector/: __init__.py
server/text_generation_server/utils/: punica_utils.py
src/framework/: textgen.py
