[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "framework"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "torch",
    "transformers",
    "numpy",
    "accelerate",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pytz",
    "tqdm",
    "scipy",
    "peft",
    "accelerate",
    "textual",
    "rich",
]

[tool.ruff]
exclude = ["third_party"]

[tool.ruff.isort]
known-first-party = ["framework"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "I",   # isort
]
ignore = [
    "E501", # Line too long
    "E741", # Ambiguous variable name
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["examples", "src", "tests"]
